--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>StringCalculator</name>
 	<description>This is an Assessment Calculator</description>
 	<properties>
-		<java.version>17</java.version>
+  <java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -43,12 +43,21 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
